# rbf-interpolation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: simple.rs  thin_plate_spline.rs
src/: builder.rs  kernel.rs  lib.rs  powers.rs  rbf.rs  test.rs
